# HRDprojects

proj1_distance_alarm/: proj1.ino
proj1_distance_alarm/distance_alarm/: distance_alarm.ino  my_lcd_Arduino_lib_v2_3.h
proj1_distance_alarm/distance_alarm2/: distance_alarm2.ino  my_arduino_lib.h  rc_motor.h
proj1_distance_alarm/distance_alarm3/: distance_alarm3.ino  rc_motor.h
proj2_socket_tictactoe/codes/: 0_server, client5, py13.txt  TICTACTOE_CLIENT  TICTACTOE_CLIENT2  TICTACTOE_CLIENT3  TICTACTOE_CLIENT4  TICTACTOE_CLIENT5  TICTACTOE_SERVER  TICTACTOE_SERVER2  tictactoe1.py  tictactoe10.py  tictactoe11.py  tictactoe12.py  tictactoe13.py  tictactoe2.py  tictactoe3.py  tictactoe4.py  tictactoe5.py  tictactoe6.py  tictactoe7.py  tictactoe8.py  tictactoe9.py  tictactoe_client.c  tictactoe_client2.c  tictactoe_client3.c  tictactoe_client4.c  tictactoe_client5.c  tictactoe_server.c  tictactoe_server2.c  tictactoe_server3.c
proj3_face_detecting_doorlock/: CMakeLists.txt  doorlock.py  doorlock_client.cpp  doorlock_client_1.cpp  doorlock_client_2.cpp  doorlock_client_3.cpp  doorlock_client_4.cpp  doorlock_client_5.cpp  doorlock_server.cpp  proj3.py  proj3_1.cpp  proj3_1.py  proj3_2.cpp
